--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="before-after.min.js"></script>
   <!-- CDN link if you prefer to use this one -->
-  <script type="text/javascript" src="https://cdn.jotfor.ms/before-after/before-after.js"></script>
+  <script type="text/javascript" src="jquery.js"></script>
   <script src="before-after.min.js"></script>
 
   <script type="text/javascript">
