change img after

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="ba-slider">
     <img src="img/before.jpg">
     <div class="resize">
-      <img src="img/after.png">
+      <img src="img/after.jpg">
     </div>
     <span class="handle"></span>
   </div>
